--- a/MassTransitSandbox.Producer/appsettings.json
+++ b/MassTransitSandbox.Producer/appsettings.json
@@ -12,6 +12,8 @@
         "Password": "guest"
     },
     "ReceiveEndpointOptions": {
+        "QueueName": "high_priority_notifications",
+        "PrefetchCount": 4,
         "ExchangeName": "notifications"
     }
 }
