--- a/MassTransitSandbox.Contracts/MassTransitSandbox.Contracts.csproj
+++ b/MassTransitSandbox.Contracts/MassTransitSandbox.Contracts.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="MassTransit" Version="8.1.3" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
     </ItemGroup>
 
 </Project>
